Feat: Decoupled Candidate, Submission, and Tokens to enable individual audit trails.